--- a/style.css
+++ b/style.css
@@ -1,24 +1,42 @@
+  
 .app {
-  height: 500px;
+  display: flex;
+    flex-direction: column;
+    height: 500px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .headings {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
 .brush-selection {
   height: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .paint {
   height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .palette {
   display: flex;
+    margin-left: -30px;
 }
 
 .brush {
+  display: flex;
 
 }
 
@@ -34,7 +52,12 @@
 }
 
 .canvas {
-
+  display: grid;
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(10, 1fr);
+  height: 300px;
+  width: 300px;
+  border: 1px solid black;
 }
 
 .square {
@@ -42,21 +65,26 @@
 }
 
 .color-1 {
+  background-color: lightblue;
 
 }
 
 .color-2 {
+  background-color: orange;
 
 }
 
 .color-3 {
+  background-color: lightgreen;
 
 }
 
 .color-4 {
+  background-color: yellow;
 
 }
 
 .color-5 {
+  background-color: white;
 
 }
