--- a/style.css
+++ b/style.css
@@ -65,26 +65,26 @@
 }
 
 .color-1 {
-  background-color: lightblue;
+  background-color: orangered;
 
 }
 
 .color-2 {
-  background-color: orange;
+  background-color: green;
 
 }
 
 .color-3 {
-  background-color: lightgreen;
+  background-color: blue;
 
 }
 
 .color-4 {
-  background-color: yellow;
+  background-color: red;
 
 }
 
 .color-5 {
-  background-color: white;
+  background-color: grey;
 
 }
