--- a/style.css
+++ b/style.css
@@ -55,13 +55,15 @@
   display: grid;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(10, 1fr);
-  height: 300px;
-  width: 300px;
-  border: 1px solid black;
+  height: 500px;
+  width: 500px;
+  border: 2px solid black;
 }
 
 .square {
+  
   transition: 0.5s;
+  
 }
 
 .color-1 {
@@ -85,6 +87,18 @@
 }
 
 .color-5 {
-  background-color: grey;
+
+  background-color:purple;
+
+}
+
+.color-6 {
+
+  background-color:pink;
+
+}
+.color-7 {
+
+  background-color:white;
 
 }
